[no-issue] Align trips by tag.

--- a/src/main/java/client/app/styles/profile.css
+++ b/src/main/java/client/app/styles/profile.css
@@ -58,7 +58,7 @@ profileLink
 
 .profileContainer {
   margin-right: 200px;
-  margin-top: 25px;
+  margin-top: 100px;
   display: inline-block;
 }
 
